--- a/sssd.conf
+++ b/sssd.conf
@@ -1,5 +1,5 @@
 [sssd] 
-domains = domain.com 
+domains = ad01.adminotaur 
 config_file_version = 2 
 services = nss, pam, ssh 
 debug_level = 3 
@@ -10,7 +10,7 @@ debug_level = 3
 [pam] 
 debug_level = 3 
 
-[domain/domain.com] 
+[domain/ad01.adminotaur] 
 debug_level = 3 
 enumerate = false 
 case_sensitive = false 
@@ -22,8 +22,8 @@ chpass_provider = ldap
 ldap_schema = rfc2307bis 
 ldap_id_use_start_tls = true 
 ldap_tls_reqcert = allow 
-ldap_user_search_base = OU=Users,OU=domain-Users,dc=domain,dc=com 
-ldap_group_search_base = OU=Groups,OU=domain-Users,dc=domain,dc=com 
+ldap_user_search_base = OU=Users,OU=Users,dc=ad01,dc=adminotaur
+ldap_group_search_base = OU=Groups,OU=Users,dc=ad01,dc=adminotaur 
 ldap_user_object_class = user 
 ldap_user_principal = userPrincipalName 
 ldap_user_name = userPrincipalName  OR givenName or sAMAccountName 
@@ -35,10 +35,10 @@ fallback_homedir = /home/%u
 default_shell = /bin/bash 
 ldap_user_extra_attrs = altSecurityIdentities:altSecurityIdentities 
 ldap_user_ssh_public_key = altSecurityIdentities 
-ldap_uri = ldap://domain.com,ldap://domain.com 
-ldap_default_bind_dn = CN=name,OU=service,OU=users,OU=domain-users,DC=domain,DC=com 
-ldap_default_authtok_type = password 
-ldap_default_authtok = password
+ldap_uri = ldap://ad01.adminotaur,ldap://ad01.adminotaur 
+ldap_default_bind_dn = CN=testuser,OU=service,OU=Users,DC=ad01,DC=adminotaur 
+ldap_default_authtok_type = test
+ldap_default_authtok = test
 
 # Access settings via simple 
 simple_allow_groups = groups-all
